# timeline-desktop

./: .gitignore  AGENTS.md  Cargo.toml  README.md
apps/browser-extension/: manifest.json  service-worker.js
apps/desktop-agent/: Cargo.toml
apps/desktop-agent/src/: http.rs
apps/timeline-agent/: Cargo.toml
apps/timeline-agent/src/: config.rs  db.rs  http.rs  main.rs  state.rs  trackers.rs  updater.rs  windows.rs
apps/timeline-backend/: build.rs
apps/timeline-backend/src/: config.rs  db.rs  layout.rs  main.rs  system.rs  trackers.rs
apps/web-ui/: index.html  package-lock.json  package.json
apps/web-ui/src/: App.css  App.tsx  api.ts  index.css
apps/web-ui/src/components/: calendar-grid.tsx  donut-chart.tsx  timeline-chart.tsx  timeline-clock.tsx
apps/web-ui/src/hooks/: use-theme.ts
apps/web-ui/src/lib/: chart-model.ts  theme.ts
apps/web-ui/src/pages/: stats-page.tsx
config/: timeline-agent.example.toml  timeline.example.toml
crates/common/src/: lib.rs
docs/: architecture.md  frontend-guidelines.md
packaging/windows/: Timeline.iss
scripts/: build-installer.ps1  build-portable.ps1  generate-icons.ps1
