[package]
name = "timeline"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
common = { path = "../../crates/common" }
fs2 = "0.4.3"
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
time.workspace = true
tokio.workspace = true
toml = "0.9.8"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tao = "0.34"
tray-icon = "0.21.3"
winrt-notification = "0.5.1"
winreg = "0.55.0"
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_RemoteDesktop",
  "Win32_Security",
  "Win32_System_StationsAndDesktops",
  "Win32_System_SystemInformation",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winres = "0.1.12"
